--- a/.vitepress/theme/styles/vars.css
+++ b/.vitepress/theme/styles/vars.css
@@ -1,43 +1,50 @@
 /**
- * Colors
+ * Colors: Palette
  * -------------------------------------------------------------------------- */
 
 :root {
-  --vp-c-green: #42b883;
-  --vp-c-green-light: #42d392;
-  --vp-c-green-lighter: #35eb9a;
-  --vp-c-green-dark: #33a06f;
-  --vp-c-green-darker: #155f3e;
-  --vp-c-green-dimm-1: rgba(66, 184, 131, 0.05);
-  --vp-c-green-dimm-2: rgba(66, 184, 131, 0.2);
-  --vp-c-green-dimm-3: rgba(66, 184, 131, 0.5);
+  --vp-c-blue-1: #3b8eed;
+  --vp-c-blue-2: #549ced;
+  --vp-c-blue-3: #50a2ff;
+  --vp-c-blue-soft: rgba(59, 142, 237, 0.14);
 
-  --vp-c-blue: #3b8eed;
-  --vp-c-blue-light: #549ced;
-  --vp-c-blue-lighter: #50a2ff;
-  --vp-c-blue-dark: #3468a3;
-  --vp-c-blue-darker: #255489;
-  --vp-c-blue-dimm-1: rgba(59, 142, 237, 0.05);
-  --vp-c-blue-dimm-2: rgba(59, 142, 237, 0.2);
-  --vp-c-blue-dimm-3: rgba(59, 142, 237, 0.5);
+  --vp-c-green-1: #42b883;
+  --vp-c-green-2: #42d392;
+  --vp-c-green-3: #35eb9a;
+  --vp-c-green-soft: rgba(66, 184, 131, 0.14);
+}
 
-  --vp-c-react: var(--vp-c-blue);
-  --vp-c-react-light: var(--vp-c-blue-light);
-  --vp-c-react-lighter: var(--vp-c-blue-lighter);
-  --vp-c-react-dark: var(--vp-c-blue-dark);
-  --vp-c-react-darker: var(--vp-c-blue-darker);
+.dark {
+  --vp-c-blue-1: #3b8eed;
+  --vp-c-blue-2: #3468a3;
+  --vp-c-blue-3: #255489;
+  --vp-c-blue-soft: rgba(59, 142, 237, 0.16);
 
-  --vp-c-vue: var(--vp-c-green);
-  --vp-c-vue-light: var(--vp-c-green-light);
-  --vp-c-vue-lighter: var(--vp-c-green-lighter);
-  --vp-c-vue-dark: var(--vp-c-green-dark);
-  --vp-c-vue-darker: var(--vp-c-green-darker);
+  --vp-c-green-1: #42b883;
+  --vp-c-green-2: #33a06f;
+  --vp-c-green-3: #155f3e;
+  --vp-c-green-soft: rgba(66, 184, 131, 0.16);
+}
 
-  --vp-c-brand: var(--vp-c-blue);
-  --vp-c-brand-light: var(--vp-c-blue-light);
-  --vp-c-brand-lighter: var(--vp-c-blue-lighter);
-  --vp-c-brand-dark: var(--vp-c-blue-dark);
-  --vp-c-brand-darker: var(--vp-c-blue-darker);
+/**
+ * Colors: Function
+ * -------------------------------------------------------------------------- */
+
+:root {
+  --vp-c-brand-1: var(--vp-c-blue-1);
+  --vp-c-brand-2: var(--vp-c-blue-2);
+  --vp-c-brand-3: var(--vp-c-blue-3);
+  --vp-c-brand-soft: var(--vp-c-blue-soft);
+
+  --vp-c-react-1: var(--vp-c-blue-1);
+  --vp-c-react-2: var(--vp-c-blue-2);
+  --vp-c-react-3: var(--vp-c-blue-3);
+  --vp-c-react-soft: var(--vp-c-blue-soft);
+
+  --vp-c-vue-1: var(--vp-c-green-1);
+  --vp-c-vue-2: var(--vp-c-green-2);
+  --vp-c-vue-3: var(--vp-c-green-3);
+  --vp-c-vue-soft: var(--vp-c-green-soft);
 }
 
 /**
@@ -45,25 +52,25 @@
  * -------------------------------------------------------------------------- */
 
 :root {
-  --vp-button-react-border: var(--vp-c-react-light);
-  --vp-button-react-text: var(--vp-c-text-dark-1);
-  --vp-button-react-bg: var(--vp-c-react);
-  --vp-button-react-hover-border: var(--vp-c-react-light);
-  --vp-button-react-hover-text: var(--vp-c-text-dark-1);
-  --vp-button-react-hover-bg: var(--vp-c-react-light);
-  --vp-button-react-active-border: var(--vp-c-react-light);
-  --vp-button-react-active-text: var(--vp-c-text-dark-1);
-  --vp-button-react-active-bg: var(--vp-button-react-bg);
+  --vp-button-react-border: transparent;
+  --vp-button-react-text: var(--vp-c-white);
+  --vp-button-react-bg: var(--vp-c-react-2);
+  --vp-button-react-hover-border: transparent;
+  --vp-button-react-hover-text: var(--vp-c-white);
+  --vp-button-react-hover-bg: var(--vp-c-react-1);
+  --vp-button-react-active-border: transparent;
+  --vp-button-react-active-text: var(--vp-c-white);
+  --vp-button-react-active-bg: var(--vp-c-react-1);
 
-  --vp-button-vue-border: var(--vp-c-vue-light);
-  --vp-button-vue-text: var(--vp-c-text-dark-1);
-  --vp-button-vue-bg: var(--vp-c-vue);
-  --vp-button-vue-hover-border: var(--vp-c-vue-light);
-  --vp-button-vue-hover-text: var(--vp-c-text-dark-1);
-  --vp-button-vue-hover-bg: var(--vp-c-vue-light);
-  --vp-button-vue-active-border: var(--vp-c-vue-light);
-  --vp-button-vue-active-text: var(--vp-c-text-dark-1);
-  --vp-button-vue-active-bg: var(--vp-button-vue-bg);
+  --vp-button-vue-border: transparent;
+  --vp-button-vue-text: var(--vp-c-white);
+  --vp-button-vue-bg: var(--vp-c-vue-2);
+  --vp-button-vue-hover-border: transparent;
+  --vp-button-vue-hover-text: var(--vp-c-white);
+  --vp-button-vue-hover-bg: var(--vp-c-vue-1);
+  --vp-button-vue-active-border: transparent;
+  --vp-button-vue-active-text: var(--vp-c-white);
+  --vp-button-vue-active-bg: var(--vp-c-vue-1);
 }
 
 /**
@@ -98,17 +105,8 @@
   }
 }
 
-/**
- * Component: Custom Block
- * -------------------------------------------------------------------------- */
-
-:root {
-  --vp-custom-block-tip-border: var(--vp-c-blue);
-  --vp-custom-block-tip-text: var(--vp-c-blue);
-  --vp-custom-block-tip-bg: var(--vp-c-bg-soft);
-  --vp-custom-block-tip-code-bg: var(--vp-c-bg-soft-down);
-}
-
-.dark {
-  --vp-custom-block-tip-text: var(--vp-c-blue-light);
+/* Safari has a very bad performance on gradient and filter */
+.browser-safari, .browser-firefox {
+  --vp-home-hero-image-background-image: transparent;
+  --vp-home-hero-image-filter: '';
 }
